nav destinations created

--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -1,5 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/app_nav">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/app_nav"
+    app:startDestination="@id/hotel">
 
+    <fragment
+        android:id="@+id/hotel"
+        android:name="com.example.hoteltest.presentation.Hotel"
+        android:label="fragment_hotel"
+        tools:layout="@layout/fragment_hotel" >
+        <action
+            android:id="@+id/action_hotel_to_room"
+            app:destination="@id/room" />
+    </fragment>
+    <fragment
+        android:id="@+id/room"
+        android:name="com.example.hoteltest.presentation.Room"
+        android:label="fragment_room"
+        tools:layout="@layout/fragment_room" >
+        <action
+            android:id="@+id/action_room_to_booking"
+            app:destination="@id/booking" />
+    </fragment>
+    <fragment
+        android:id="@+id/booking"
+        android:name="com.example.hoteltest.presentation.Booking"
+        android:label="fragment_booking"
+        tools:layout="@layout/fragment_booking" >
+        <action
+            android:id="@+id/action_booking_to_paid"
+            app:destination="@id/paid" />
+    </fragment>
+    <fragment
+        android:id="@+id/paid"
+        android:name="com.example.hoteltest.presentation.Paid"
+        android:label="fragment_paid"
+        tools:layout="@layout/fragment_paid" >
+        <action
+            android:id="@+id/action_paid_to_hotel"
+            app:destination="@id/hotel" />
+    </fragment>
 </navigation>
