--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -2,7 +2,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -44,14 +43,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
-
                 <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="257dp"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/dimen_16"
                     app:cardCornerRadius="15dp">
 
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/view_pager_pics"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        
+                    </androidx.viewpager2.widget.ViewPager2>
+                    
+                    <com.google.android.material.tabs.TabLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"/>
 
                 </androidx.cardview.widget.CardView>
 
