--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,5 +18,6 @@
     <style name="Toolbar.TitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/sf_pro_display_medium</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
