--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -394,6 +394,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/ll_about_hotel">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_to_room"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
