--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_field"
+    android:orientation="vertical"
     tools:context=".presentation.room.RoomFragment">
-
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_room"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:title="@string/hotel_fragment_title"
-        app:titleCentered="true"
-        app:navigationIcon="@drawable/icon_back"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextAppearance="@style/Toolbar.TitleText"/>
+        app:navigationIcon="@drawable/icon_back"
+        app:title="@string/hotel_fragment_title"
+        app:titleCentered="true"
+        app:titleTextAppearance="@style/Toolbar.TitleText" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_room"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        tools:listitem="@layout/room_recycler_item"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_room"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/room_recycler_item" />
+</LinearLayout>
