--- a/app/src/main/res/layout/room_recycler_item.xml
+++ b/app/src/main/res/layout/room_recycler_item.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.denzcoskun.imageslider.ImageSlider
-                android:id="@+id/image_slider_hotel"
+                android:id="@+id/image_slider_room_item"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
         </androidx.cardview.widget.CardView>
@@ -77,6 +77,7 @@
             app:cardBackgroundColor="@color/blue_light"
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp"
+            android:layout_marginTop="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraint_peculiarities_room">
 
@@ -95,7 +96,7 @@
                     android:fontFamily="@font/sf_pro_display_medium"
                     android:textColor="@color/blue"
                     android:textSize="16sp"
-                    tools:text="Подробнее о номере" />
+                    android:text="Подробнее о номере" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -116,6 +117,7 @@
             app:layout_constraintTop_toBottomOf="@+id/room_details">
 
             <TextView
+                android:id="@+id/tv_room_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -125,6 +127,7 @@
                 android:textSize="30sp" />
 
             <TextView
+                android:id="@+id/tv_room_pricePer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sf_pro_display_regular"
@@ -142,6 +145,7 @@
             android:backgroundTint="@color/blue"
             android:fontFamily="@font/sf_pro_display_medium"
             android:padding="15dp"
+            android:elevation="0dp"
             android:text="Выбрать номер"
             android:textAllCaps="false"
             android:textColor="@color/white"
