--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -14,17 +14,6 @@
             android:layout_height="wrap_content"
             android:background="@color/grey_field">
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/appBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:title="@string/hotel_fragment_title"
-                app:titleCentered="true"
-                android:background="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:titleTextAppearance="@style/Toolbar.TitleText"/>
 
             <LinearLayout
                 android:id="@+id/ll_basic_data"
@@ -37,7 +26,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
