room item button click behavior implemented

--- a/app/src/main/res/layout/room_recycler_item.xml
+++ b/app/src/main/res/layout/room_recycler_item.xml
@@ -138,7 +138,7 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_to_room"
+            android:id="@+id/btn_to_booking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
