--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,10 @@
         <item name="android:fontFamily">@font/sf_pro_display_medium</item>
         <item name="android:textColor">@color/black</item>
     </style>
+    
+    <style name="InputText" parent="TextAppearance.AppCompat.Body1">
+
+
+
+    </style>
 </resources>
