paid to hotel navigation

--- a/app/src/main/res/layout/fragment_paid.xml
+++ b/app/src/main/res/layout/fragment_paid.xml
@@ -70,7 +70,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_to_room"
+            android:id="@+id/btn_to_hotel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
