--- a/app/src/main/res/layout/booking_recycler_customer_item.xml
+++ b/app/src/main/res/layout/booking_recycler_customer_item.xml
@@ -54,13 +54,13 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_email"
             android:layout_marginTop="8dp"
             android:focusableInTouchMode="true"
             app:boxCornerRadiusTopStart="10dp"
             app:boxCornerRadiusBottomStart="10dp"
             app:boxCornerRadiusBottomEnd="10dp"
             app:boxCornerRadiusTopEnd="10dp"
-
             app:hintTextColor="@color/blue"
             android:textColorHint="@color/grey_field_text"
             app:boxBackgroundColor="@color/grey_field"
@@ -71,6 +71,7 @@
             android:hint="Почта">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sf_pro_display_regular"
